# wellpulse

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .gitleaksignore  .jestrc.max.json  .lintstagedrc.js  .npmrc  .pnpmrc  .prettierignore  .prettierrc  .semgrepignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  artillery-load-test.yml  artillery-payloads.csv  artillery-processor.js  baseline-results-20251024-102532.txt  cookies.txt  docker-compose.yml  kill-dev-ports.sh  package-lock.json  package.json  pnpm-lock.yaml  test-parallel.sh  tsconfig.json  turbo.json
.claude/: .gitignore  CHEATSHEET.md  COMMANDS.md  PERFORMANCE-TIPS.md  QUICKSTART.md  README.md  SPEED-GUIDE.md  settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot-suppressions.xml  dependabot.yml
.husky/: pre-push
apps/scada-ingestion/: .env.example  ADAPTER_PATTERN_IMPLEMENTATION.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  build.rs  package.json  seed-test-data.sql
apps/scada-ingestion/proto/: scada.proto
apps/scada-ingestion/src/: aggregator.rs  config.rs  errors.rs  main.rs  metrics.rs  opc_client.rs  tenant_router.rs  tenant_router_v2.rs  timescale_writer.rs
apps/scada-ingestion/src/adapters/: dnp3.rs  ethernet_ip.rs  factory.rs  hart_ip.rs  mod.rs  modbus_rtu.rs  modbus_tcp.rs  mqtt.rs  opcua.rs
apps/scada-ingestion/src/grpc/: mod.rs
apps/scada-ingestion/src/health/: mod.rs
apps/scada-ingestion/src/security/: authenticator.rs  data_validator.rs  encryption.rs  mod.rs
docs/: DOCUMENTATION-ENHANCEMENTS.md  RELEASE_CHECKLIST.md  (+1 more)
(+870 files in other folders)
