[package]
name = "scada-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# Protocol adapters
opcua = { version = "0.12", features = ["client", "console-logging"] }
tokio-modbus = "0.13"
tokio-serial = "5.4"
rumqttc = "0.24"
dnp3 = "1.6"
async-trait = "0.1"
url = "2.5"

# Database (async PostgreSQL with compile-time SQL checks)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP/gRPC
axum = "0.8"
tonic = "0.12"
prost = "0.13"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
lazy_static = "1.5"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
dotenv = "0.15"

# Security & Encryption
aes-gcm = "0.10"
ring = "0.17"
base64 = "0.22"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
criterion = "0.5"
